add stripe dependency and return when payment error is thrown

--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "sp-reservations-api",
   "version": "1.0.0",
   "description": "GIU Software Project Reservations API & Kafka Producer",
-  "main": "index.js",  
+  "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
     "load": "k6 run tests/k6/reservation/reservation.spec.js"
   },
   "dependencies": {
+    "@hapi/joi": "17.1.1",
+    "dotenv": "16.0.1",
     "express": "4.18.2",
+    "kafkajs": "2.2.3",
     "knex": "0.95.14",
     "pg": "8.7.1",
-    "uuid": "8.3.2",
-    "kafkajs": "2.2.3",
-    "@hapi/joi": "17.1.1",
-    "dotenv": "16.0.1"
+    "stripe": "^11.4.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "nodemon": "2.0.20",
-    "k6": "0.0.0"
+    "k6": "0.0.0",
+    "nodemon": "2.0.20"
   }
 }
