change cvc to string and update stripe flow

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ CLIENT_ID=sp-reservations-producer-YOUR_TEAM_NAME
 GROUP_ID=fifa-world-cup-master-list
 
 # POSTGRESQL
+STRIPE_SECRET_KEY=sk_test_UP1tHQqVGDB715vq4OKJ7FyW
+
+# POSTGRESQL
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
