--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@hapi/joi": "17.1.1",
-    "dotenv": "16.0.1",
+    "dotenv": "^16.0.3",
     "express": "4.18.2",
     "kafkajs": "2.2.3",
     "knex": "0.95.14",
