--- a/.env
+++ b/.env
@@ -6,13 +6,12 @@ KAFKA_SASL_PASSWORD=
 KAFKA_BROKERS=
 TOPIC_FIFA_TICKET_SALES=fifa-world-cup-2022-ticket-sales
 CLIENT_ID=sp-reservations-producer-YOUR_TEAM_NAME
-GROUP_ID=fifa-world-cup-master-list
 
 # POSTGRESQL
 STRIPE_SECRET_KEY=sk_test_
 
 # POSTGRESQL
-POSTGRES_HOST=localhost
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DATABASE=postgres
+POSTGRES_HOST=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
