--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "", "destination": "" }]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/routes/api.js" }]
 }
