update vercel config

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ KAFKA_BROKERS=
 TOPIC_FIFA_TICKET_SALES=fifa-world-cup-2022-ticket-sales
 CLIENT_ID=sp-reservations-producer-YOUR_TEAM_NAME
 
-# POSTGRESQL
+# STRIPE
 STRIPE_SECRET_KEY=sk_test_
 
 # POSTGRESQL
