--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/routes/api.js" }]
+  "rewrites": [{ "source": "/api/(.*)", "destination": "server.js" }]
 }
